    an unintelligible crash.
  * tests/test_auth.py: In test_add_key_from_server_mitm(), show the exception
    if it does not match the expectation, so that this becomes possible to
    debug.
  * aptsources/distro.py: Replace the deprecated getiterator() ElementTree
    method with iter(), to avoid raising a PendingDeprecationWarning.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 20 Nov 2012 09:43:36 +0100

python-apt (0.8.8ubuntu4) raring; urgency=low

  * tests/test_apt_cache.py, tests/test_lp659438.py, tests/test_progress.py:
    - Clear out APT::Update::Post-Invoke and
      APT::Update::Post-Invoke-Success in tests that call cache.update to
      avoid pollution from the host system.
  * tests/test_auth.py:
    - Discard stderr from gpg.
    - Try successive keyserver ports if 19191 is already in use.
  * aptsources/distinfo.py, aptsources/distro.py, aptsources/sourceslist.py,
    tests/test_apt_cache.py, tests/test_debfile_multiarch.py:
    - Use logging.warning rather than the deprecated logging.warn.
  * tests/test_debfile_multiarch.py:
    - Don't log warnings when skipping tests; the resulting stderr output
      causes autopkgtest to fail.
  * tests/test_all.py:
    - Write general test status output to stdout, not stderr.
  * tests/test_aptsources.py:
    - Clean up file object in test_enable_component.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 19 Nov 2012 14:17:02 +0000

python-apt (0.8.8ubuntu3) raring; urgency=low

  * tests/test_lp659438.py:
    - Add an Architecture: line to the test Packages file so that apt
      doesn't get upset with it.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 08 Nov 2012 15:03:36 +0000

python-apt (0.8.8ubuntu2) raring; urgency=low

  * data/templates/Ubuntu.info.in:
    - Fix descriptions of quantal and raring.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 07 Nov 2012 13:16:33 +0000

python-apt (0.8.8ubuntu1) raring; urgency=low

  [ Michael Vogt ]
  * merged from the debian-sid branch: