@@ -285,6 +285,14 @@ class TestAuthKeys(TestCase):
         self.keyserver_port = int(keyserver_read.readline())
         keyserver_read.close()
 
+        # temporarily disable proxy, as gnupg does not get along with that
+        # (LP #789049)
+        self.orig_proxy = os.environ.get('http_proxy')
+        try:
+            del os.environ['http_proxy']
+        except KeyError:
+            pass
+
         # wait a bit until server is ready
         time.sleep(0.5)
 
@@ -295,6 +303,9 @@ class TestAuthKeys(TestCase):
         os.kill(self.keyserver_pid, 15)
         os.wait()
 
+        # restore proxy
+        if self.orig_proxy is not None:
+            os.environ['http_proxy'] = self.orig_proxy
 
 if __name__ == "__main__":
     unittest.main()
