@@ -7,6 +7,8 @@ python-apt (0.8.8ubuntu5) UNRELEASED; urgency=low
     debug.
   * aptsources/distro.py: Replace the deprecated getiterator() ElementTree
     method with iter(), to avoid raising a PendingDeprecationWarning.
+  * tests/test_auth.py: Temporarily disable $http_proxy for the tests, as
+    gnupg does not get along with proxies (LP #789049)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 20 Nov 2012 09:43:36 +0100
 
